--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "PCAT Photo App",
   "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/sefadalklc/PCAT/issues"
   },
-  "homepage": "https://github.com/sefadalklc/PCAT#readme"
+  "homepage": "https://github.com/sefadalklc/PCAT#readme",
+  "dependencies": {
+    "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
